--- a/index.html
+++ b/index.html
@@ -5,112 +5,188 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ilayanila C.G | Full Stack Web Developer</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    /* Reset and basics */
+    * {
       margin: 0;
       padding: 0;
-      background: #f8f9fa;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      background: #f9f9f9;
       color: #333;
     }
-    header {
+
+    /* Navbar */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       background: #222;
       color: #fff;
-      padding: 40px 20px;
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 40px;
+      z-index: 1000;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
+    nav h1 {
+      font-size: 1.5em;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+    nav ul li {
+      margin-left: 20px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    nav ul li a:hover {
+      color: #00adb5;
+    }
+
+    /* Header section */
+    header {
+      height: 100vh;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                  url('https://source.unsplash.com/1600x900/?technology,code') center/cover no-repeat;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 0 20px;
+    }
+    header h2 {
+      font-size: 3em;
+      margin-bottom: 10px;
     }
     header p {
       font-size: 1.2em;
-      margin-top: 10px;
+      max-width: 600px;
     }
+
+    /* Section styling */
     section {
-      padding: 50px 20px;
-      max-width: 1000px;
+      padding: 80px 20px;
+      max-width: 1100px;
       margin: auto;
     }
     h2 {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
+      font-size: 2em;
+      color: #222;
     }
-    .skills, .projects, .contact {
+
+    /* Cards */
+    .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
     }
     .card {
       background: #fff;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
     }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin-bottom: 10px;
+      color: #00adb5;
+    }
+
+    /* Contact section */
+    .contact a {
+      display: inline-block;
+      margin: 10px 15px;
+      text-decoration: none;
+      color: #00adb5;
+      font-weight: bold;
+    }
+
+    /* Footer */
     footer {
       text-align: center;
       padding: 20px;
       background: #222;
       color: #fff;
-      margin-top: 50px;
-    }
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Navbar -->
+  <nav>
+    <h1>Ilayanila</h1>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero / Header -->
   <header>
-    <h1>Ilayanila C.G</h1>
-    <p>Full Stack Web Developer | ERP & Cloud Solutions</p>
+    <h2>Hi, I'm Ilayanila C.G</h2>
+    <p>Full Stack Web Developer | ERP & Cloud Solutions | Innovator in Digital Applications</p>
   </header>
 
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I am a passionate and results-driven Full Stack Web Developer with experience in 
-      front-end and back-end technologies. Skilled in building dynamic, scalable, 
-      and user-friendly applications, I enjoy turning ideas into impactful digital 
-      solutions.
+      I am a passionate Full Stack Web Developer with expertise in building 
+      responsive, scalable, and user-friendly applications. Skilled in both 
+      front-end and back-end development, I enjoy turning complex problems 
+      into elegant digital solutions.
     </p>
   </section>
 
   <!-- Skills -->
   <section id="skills">
     <h2>Skills</h2>
-    <div class="skills">
-      <div class="card"><strong>Front-End:</strong> HTML5, CSS3, JavaScript, React, Bootstrap</div>
-      <div class="card"><strong>Back-End:</strong> Node.js, Python, Java, PHP</div>
-      <div class="card"><strong>Databases:</strong> MySQL, MongoDB, Oracle</div>
-      <div class="card"><strong>Tools & Cloud:</strong> GitHub, Docker, Google Cloud, Power Apps</div>
+    <div class="grid">
+      <div class="card"><h3>Front-End</h3><p>HTML5, CSS3, JavaScript, React, Bootstrap</p></div>
+      <div class="card"><h3>Back-End</h3><p>Node.js, Python, Java, PHP</p></div>
+      <div class="card"><h3>Databases</h3><p>MySQL, MongoDB, Oracle</p></div>
+      <div class="card"><h3>Cloud & Tools</h3><p>GitHub, Docker, Google Cloud, Power Apps</p></div>
     </div>
   </section>
 
   <!-- Projects -->
   <section id="projects">
     <h2>Projects</h2>
-    <div class="projects">
+    <div class="grid">
       <div class="card">
         <h3>🍔 Online Food Ordering Solution</h3>
-        <p>Developed a complete food ordering system with mobile app integration and POS system.</p>
+        <p>Developed a complete food ordering system with mobile app integration and POS support.</p>
       </div>
       <div class="card">
-        <h3>📊 ERP Support & Integrations</h3>
-        <p>Worked on Oracle ERP & Workday integrations to automate workflows and data exchange.</p>
+        <h3>📊 ERP Integrations</h3>
+        <p>Automated workflows with Oracle ERP and Workday integrations ensuring smooth data exchange.</p>
       </div>
       <div class="card">
         <h3>🖥️ Responsive Web Design</h3>
-        <p>Created clean, responsive websites using HTML, CSS, and JavaScript.</p>
+        <p>Created modern, responsive websites with clean UI/UX for multiple clients.</p>
       </div>
       <div class="card">
-        <h3>📋 Intake Form Automation</h3>
-        <p>Built automated intake forms in SharePoint with workflows using Power Automate.</p>
+        <h3>📋 SharePoint Automation</h3>
+        <p>Built intake forms and workflows in SharePoint using Power Automate to reduce manual effort.</p>
       </div>
     </div>
   </section>
@@ -118,19 +194,11 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <div class="contact">
-      <div class="card">
-        📞 Phone: +974 3027 4496
-      </div>
-      <div class="card">
-        📧 Email: <a href="mailto:ilayanilacg2001@gmail.com">ilayanilacg2001@gmail.com</a>
-      </div>
-      <div class="card">
-        🔗 LinkedIn: <a href="#">LinkedIn Profile</a>
-      </div>
-      <div class="card">
-        💻 GitHub: <a href="#">GitHub Profile</a>
-      </div>
+    <div class="contact" style="text-align:center;">
+      <a href="mailto:ilayanilacg2001@gmail.com">📧 Email</a>
+      <a href="tel:+97430274496">📞 Phone</a>
+      <a href="https://linkedin.com/in/yourprofile" target="_blank">🔗 LinkedIn</a>
+      <a href="https://github.com/ilayanilacg" target="_blank">💻 GitHub</a>
     </div>
   </section>
 
