--- a/index.html
+++ b/index.html
@@ -4,165 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ilayanila C.G | Full Stack Web Developer</title>
-  <style>
-    /* Reset and basics */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      background: #fff8f0; /* cream background */
-      color: #5b4636; /* dark brown text */
-    }
-
-    /* Navbar */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: #f7e9e1; /* nude/rose */
-      color: #5b4636;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 40px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      z-index: 1000;
-      transition: background 0.3s;
-    }
-    nav h1 {
-      font-size: 1.5em;
-      font-weight: 700;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-    }
-    nav ul li {
-      margin-left: 20px;
-    }
-    nav ul li a {
-      color: #5b4636;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease, transform 0.3s ease;
-    }
-    nav ul li a:hover {
-      color: #e07a5f;
-      transform: scale(1.1);
-    }
-
-    /* Header section */
-    header {
-      height: 100vh;
-      background: linear-gradient(rgba(255, 248, 240, 0.8), rgba(255, 248, 240, 0.8)),
-                  url('https://images.unsplash.com/photo-1581091012184-799f4fa3ef18?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w5MTMyfDB8MXxzZWFyY2h8MTR8fHNvZnR3YXJlJTIwZGV2ZWxvcGVyfGVufDB8fHx8MTY5NTg0NDAyMw&ixlib=rb-4.0.3&q=80&w=1600') center/cover no-repeat;
-      color: #5b4636;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 0 20px;
-      animation: fadeIn 2s ease-in;
-    }
-    header h2 {
-      font-size: 3em;
-      margin-bottom: 10px;
-      animation: slideDown 1.5s ease-out;
-    }
-    header p {
-      font-size: 1.2em;
-      max-width: 600px;
-      animation: fadeIn 2.5s ease-in;
-    }
-
-    /* Section styling */
-    section {
-      padding: 80px 20px;
-      max-width: 1100px;
-      margin: auto;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeUp 1s forwards;
-    }
-    section:nth-of-type(odd) { animation-delay: 0.3s; }
-    section:nth-of-type(even) { animation-delay: 0.6s; }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 40px;
-      font-size: 2em;
-      color: #5b4636;
-      position: relative;
-    }
-
-    /* Cards */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: #fff3e6; /* soft beige */
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    }
-    .card h3 {
-      margin-bottom: 10px;
-      color: #e07a5f;
-      font-size: 1.3em;
-    }
-
-    /* Contact section */
-    .contact a {
-      display: inline-block;
-      margin: 10px 15px;
-      text-decoration: none;
-      color: #e07a5f;
-      font-weight: bold;
-      transition: transform 0.3s ease, color 0.3s ease;
-    }
-    .contact a:hover {
-      transform: scale(1.1);
-      color: #5b4636;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #f7e9e1;
-      color: #5b4636;
-      margin-top: 40px;
-    }
-
-    /* Animations */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes slideDown {
-      from { transform: translateY(-50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-    @keyframes fadeUp {
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -186,9 +28,9 @@
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <div style="display:flex; align-items:center; flex-wrap:wrap; gap:20px; justify-content:center;">
-      <img src="https://images.unsplash.com/photo-1593642532973-d31b6557fa68?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400" alt="Female Developer" style="border-radius:15px; max-width:300px; width:100%; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-      <p style="max-width:600px;">
+    <div class="about-content">
+      <img src="https://images.unsplash.com/photo-1593642532973-d31b6557fa68?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400" alt="Female Developer">
+      <p>
         I am a passionate Full Stack Web Developer with expertise in building 
         responsive, scalable, and user-friendly applications. Skilled in both 
         front-end and back-end development, I enjoy turning complex problems 
@@ -234,7 +76,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <div class="contact" style="text-align:center;">
+    <div class="contact">
       <a href="mailto:ilayanilacg2001@gmail.com">📧 Email</a>
       <a href="tel:+97430274496">📞 Phone</a>
       <a href="https://www.linkedin.com/in/ilayanilacg" target="_blank">🔗 LinkedIn</a>
@@ -247,19 +89,6 @@
     <p>© 2025 Ilayanila C.G | Full Stack Web Developer</p>
   </footer>
 
-  <script>
-    // Simple fade-in on scroll
-    const sections = document.querySelectorAll('section');
-    window.addEventListener('scroll', () => {
-      sections.forEach(sec => {
-        const rect = sec.getBoundingClientRect();
-        if(rect.top < window.innerHeight - 100){
-          sec.style.opacity = 1;
-          sec.style.transform = 'translateY(0)';
-        }
-      });
-    });
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
