--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ilayanila C.G | Full Stack Web Developer</title>
+  <title>Ilayanila Portfolio | Full Stack Web Developer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Navbar -->
   <nav>
-    <h1>Ilayanila</h1>
+    <h1>Ilayanila Portfolio</h1>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#education">Education</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -23,6 +24,10 @@
   <header>
     <h2>Hi, I'm Ilayanila C.G</h2>
     <p>Full Stack Web Developer | ERP & Cloud Solutions | Innovator in Digital Applications</p>
+    <div class="header-contact">
+      <span>📧 ilayanilacg2001@gmail.com</span>
+      <span>📞 +974 3027 4496</span>
+    </div>
   </header>
 
   <!-- About -->
@@ -45,31 +50,56 @@
     <div class="grid">
       <div class="card"><h3>Front-End</h3><p>HTML5, CSS3, JavaScript, React, Bootstrap</p></div>
       <div class="card"><h3>Back-End</h3><p>Node.js, Python, Java, PHP</p></div>
-      <div class="card"><h3>Databases</h3><p>MySQL, MongoDB, Oracle</p></div>
-      <div class="card"><h3>Cloud & Tools</h3><p>GitHub, Docker, Google Cloud, Power Apps</p></div>
+      <div class="card"><h3>Databases</h3><p>MySQL, MongoDB, Oracle ERP</p></div>
+      <div class="card"><h3>Workday & Integrations</h3><p>Workday Studio, EIB, Core Connector, Integrations</p></div>
+      <div class="card"><h3>Power Platform</h3><p>Power Apps, Power Automate, SharePoint</p></div>
+      <div class="card"><h3>Mobile & Web Development</h3><p>Flutter, Android Applications Development, Website Development</p></div>
+      <div class="card"><h3>Cloud & Tools</h3><p>GitHub, Docker, Google Cloud</p></div>
     </div>
   </section>
 
-  <!-- Projects -->
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>🍔 Online Food Ordering Solution</h3>
-        <p>Developed a complete food ordering system with mobile app integration and POS support.</p>
-      </div>
-      <div class="card">
-        <h3>📊 ERP Integrations</h3>
-        <p>Automated workflows with Oracle ERP and Workday integrations ensuring smooth data exchange.</p>
-      </div>
-      <div class="card">
-        <h3>🖥️ Responsive Web Design</h3>
-        <p>Created modern, responsive websites with clean UI/UX for multiple clients.</p>
-      </div>
-      <div class="card">
-        <h3>📋 SharePoint Automation</h3>
-        <p>Built intake forms and workflows in SharePoint using Power Automate to reduce manual effort.</p>
-      </div>
+  <!-- Experience -->
+  <section id="experience">
+    <h2>Experience</h2>
+    <div class="experience-card">
+      <h3>Flextronics International LTD - HRIT Workday Integration Developer</h3>
+      <span>Chennai, India | Sep 2023 - Dec 2024</span>
+      <ul>
+        <li>Developed and maintained Workday integrations using Workday Studio, EIB (Enterprise Interface Builder), and Core Connectors to support HR business processes.</li>
+        <li>Designed and deployed custom applications within Workday to automate workflows, streamline HR operations, and enhance data accuracy.</li>
+        <li>Created inbound and outbound integrations with third-party systems (e.g., payroll, benefits, time tracking) ensuring seamless data exchange.</li>
+      </ul>
+    </div>
+    <div class="experience-card">
+      <h3>Flextronics International LTD - Power Platform Developer</h3>
+      <span>Chennai, India | Dec 2023 - Dec 2024</span>
+      <ul>
+        <li>Completed Power Platform Maker Certification.</li>
+        <li>Developed and deployed custom Power Apps forms integrated with SharePoint to streamline business processes and improve data capture accuracy.</li>
+        <li>Automated manual workflows using Power Automate, enhancing process efficiency and reducing approval turnaround times.</li>
+      </ul>
+    </div>
+    <div class="experience-card">
+      <h3>Flextronics International LTD - IT Security Analyst</h3>
+      <span>Chennai, India | Feb 2023 - Sep 2023</span>
+      <ul>
+        <li>Integrated security controls into API development, ensuring compliance with policies & minimizing risks by implementing encryption & firewalls.</li>
+        <li>Monitored and analyzed security alerts, identifying potential threats and vulnerabilities, and took proactive measures to safeguard organizational data.</li>
+        <li>Conducted security assessments, vulnerability scans & collaborated with teams to design tailored security solutions, improving the overall security posture.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Education -->
+  <section id="education">
+    <h2>Education</h2>
+    <div class="education-card">
+      <h3>Loyola ICAM College of Engineering & Technology, Chennai</h3>
+      <p>B.Tech in Information Technology Engineering (CGPA: 8.48)</p>
+    </div>
+    <div class="education-card">
+      <h3>Marg Navajyothi Vidyalaya, Marg Swarnabhoomi</h3>
+      <p>HSC: 73% | SSLC: 92%</p>
     </div>
   </section>
 
