--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
   </nav>
 
-  <!-- Hero / Header -->
+  <!-- Header -->
   <header>
     <h2>Hi, I'm Ilayanila C.G</h2>
     <p>Full Stack Web Developer | ERP & Cloud Solutions | Innovator in Digital Applications</p>
@@ -36,10 +36,8 @@
     <div class="about-content">
       <img src="https://images.unsplash.com/photo-1593642532973-d31b6557fa68?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400" alt="Female Developer">
       <p>
-        I am a passionate Full Stack Web Developer with expertise in building 
-        responsive, scalable, and user-friendly applications. Skilled in both 
-        front-end and back-end development, I enjoy turning complex problems 
-        into elegant digital solutions.
+        I am a passionate Full Stack Web Developer with expertise in building responsive, scalable, and user-friendly applications.
+        Skilled in front-end and back-end development, ERP integrations, and mobile app development. I enjoy turning complex problems into elegant digital solutions.
       </p>
     </div>
   </section>
@@ -50,44 +48,48 @@
     <div class="grid">
       <div class="card"><h3>Front-End</h3><p>HTML5, CSS3, JavaScript, React, Bootstrap</p></div>
       <div class="card"><h3>Back-End</h3><p>Node.js, Python, Java, PHP</p></div>
-      <div class="card"><h3>Databases</h3><p>MySQL, MongoDB, Oracle ERP</p></div>
+      <div class="card"><h3>Databases & ERP</h3><p>MySQL, MongoDB, Oracle ERP</p></div>
       <div class="card"><h3>Workday & Integrations</h3><p>Workday Studio, EIB, Core Connector, Integrations</p></div>
       <div class="card"><h3>Power Platform</h3><p>Power Apps, Power Automate, SharePoint</p></div>
-      <div class="card"><h3>Mobile & Web Development</h3><p>Flutter, Android Applications Development, Website Development</p></div>
-      <div class="card"><h3>Cloud & Tools</h3><p>GitHub, Docker, Google Cloud</p></div>
+      <div class="card"><h3>Mobile & Web Dev</h3><p>Flutter, Android Applications, Website Development</p></div>
+      <div class="card"><h3>Tools & Cloud</h3><p>GitHub, Docker, Google Cloud</p></div>
     </div>
   </section>
 
   <!-- Experience -->
   <section id="experience">
     <h2>Experience</h2>
+
     <div class="experience-card">
-      <h3>Flextronics International LTD - HRIT Workday Integration Developer</h3>
-      <span>Chennai, India | Sep 2023 - Dec 2024</span>
+      <h3>HRIT Workday Integration Developer</h3>
+      <span>Flextronics International LTD | Chennai, India | Sep 2023 - Dec 2024</span>
       <ul>
-        <li>Developed and maintained Workday integrations using Workday Studio, EIB (Enterprise Interface Builder), and Core Connectors to support HR business processes.</li>
-        <li>Designed and deployed custom applications within Workday to automate workflows, streamline HR operations, and enhance data accuracy.</li>
-        <li>Created inbound and outbound integrations with third-party systems (e.g., payroll, benefits, time tracking) ensuring seamless data exchange.</li>
+        <li>Developed and maintained Workday integrations using Workday Studio, EIB, and Core Connectors to support HR business processes.</li>
+        <li>Designed and deployed custom applications within Workday to automate workflows and enhance data accuracy.</li>
+        <li>Created inbound and outbound integrations with third-party systems (payroll, benefits, time tracking) ensuring smooth data exchange.</li>
       </ul>
     </div>
+
     <div class="experience-card">
-      <h3>Flextronics International LTD - Power Platform Developer</h3>
-      <span>Chennai, India | Dec 2023 - Dec 2024</span>
+      <h3>Power Platform Developer</h3>
+      <span>Flextronics International LTD | Chennai, India | Dec 2023 - Dec 2024</span>
       <ul>
         <li>Completed Power Platform Maker Certification.</li>
-        <li>Developed and deployed custom Power Apps forms integrated with SharePoint to streamline business processes and improve data capture accuracy.</li>
-        <li>Automated manual workflows using Power Automate, enhancing process efficiency and reducing approval turnaround times.</li>
+        <li>Developed and deployed custom Power Apps forms integrated with SharePoint to streamline business processes.</li>
+        <li>Automated workflows using Power Automate, improving process efficiency and reducing approval times.</li>
       </ul>
     </div>
+
     <div class="experience-card">
-      <h3>Flextronics International LTD - IT Security Analyst</h3>
-      <span>Chennai, India | Feb 2023 - Sep 2023</span>
+      <h3>IT Security Analyst</h3>
+      <span>Flextronics International LTD | Chennai, India | Feb 2023 - Sep 2023</span>
       <ul>
-        <li>Integrated security controls into API development, ensuring compliance with policies & minimizing risks by implementing encryption & firewalls.</li>
-        <li>Monitored and analyzed security alerts, identifying potential threats and vulnerabilities, and took proactive measures to safeguard organizational data.</li>
-        <li>Conducted security assessments, vulnerability scans & collaborated with teams to design tailored security solutions, improving the overall security posture.</li>
+        <li>Integrated security controls into API development, minimizing risks with encryption and firewalls.</li>
+        <li>Monitored and analyzed security alerts, identified potential threats, and safeguarded organizational data.</li>
+        <li>Conducted security assessments and vulnerability scans, collaborating on tailored security solutions.</li>
       </ul>
     </div>
+
   </section>
 
   <!-- Education -->
