--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#experience">Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -34,7 +35,7 @@
   <section id="about">
     <h2>About Me</h2>
     <div class="about-content">
-      <img src="https://images.unsplash.com/photo-1593642532973-d31b6557fa68?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400" alt="Female Developer">
+      <img src="https://images.unsplash.com/photo-1593642532973-d31b6557fa68?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&w=400" alt="Developer">
       <p>
         I am a passionate Full Stack Web Developer with expertise in building responsive, scalable, and user-friendly applications.
         Skilled in front-end and back-end development, ERP integrations, and mobile app development. I enjoy turning complex problems into elegant digital solutions.
@@ -90,6 +91,36 @@
       </ul>
     </div>
 
+  </section>
+
+  <!-- Projects -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="grid">
+      <!-- Gas Leak Alert System -->
+      <div class="card">
+        <img src="https://via.placeholder.com/400x200?text=Gas+Leak+Alert+System" alt="Gas Leak Alert System">
+        <h3>Gas Leak Alert System</h3>
+        <p>Designed a system to detect and alert gas leaks.</p>
+        <p><strong>Technologies:</strong> IoT, C Coding, HTML, CSS, System Design, Framework</p>
+      </div>
+
+      <!-- Motion Based Mouse -->
+      <div class="card">
+        <img src="https://via.placeholder.com/400x200?text=Motion+Based+Mouse" alt="Motion Based Mouse">
+        <h3>Motion Based Mouse</h3>
+        <p>Developed a motion-based mouse for disabled people.</p>
+        <p><strong>Technologies:</strong> AI, Python, DLIB, OpenCV, UI Designing</p>
+      </div>
+
+      <!-- Online Food Ordering Platform -->
+      <div class="card">
+        <img src="https://via.placeholder.com/400x200?text=Food+Ordering+Platform" alt="Online Food Ordering Platform">
+        <h3>Online Food Ordering Platform & Website</h3>
+        <p>Designed an online food ordering platform and website.</p>
+        <p><strong>Technologies:</strong> Python, HTML, CSS, JavaScript, MySQL, MongoDB, ASP.net</p>
+      </div>
+    </div>
   </section>
 
   <!-- Education -->
